css + textos + imagenes + fondos + navbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,25 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+        "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+        "Helvetica Neue", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+        monospace;
+}
+@font-face {
+    font-family: "komet";
+    /* Choose a name for your font */
+    src: local("komet"),
+        url("./assets/fonts/fonnts.com-Komet_Regular_SC.otf") format("opentype");
+}
+@font-face {
+    font-family: "royal-ave";
+    /* Choose a name for your font */
+    src: local("royal-ave"),
+        url("./assets/fonts/Royal_Avenue_Demo.otf") format("opentype");
 }
