--- a/src/components/navBar/NavBar.scss
+++ b/src/components/navBar/NavBar.scss
@@ -7,7 +7,7 @@
     //background: linear-gradient(90deg, rgba(161, 205, 173, 1) 0%, rgba(167, 191, 195, 1) 100%);
     background: #ffffff;
     background: linear-gradient(360deg, rgba(255, 255, 255, 0) 10%, rgba(167, 191, 195, 1) 100%);
-   // position: fixed !important;
+  position: absolute !important;
     top: 0;
     width: 100% !important;
     height: 113px;
@@ -28,6 +28,17 @@
     a:hover {
         color: #ffffff !important;
 
+    }
+    .dropdown-menu{
+      //  background: #fafafa;
+     //   background: linear-gradient(circle, rgba(255, 255, 255, 0) 10%, rgba(167, 191, 195, 1) 100%);
+       background-color: rgba(167, 191, 195, 0.411) ;
+
+          a:hover {
+           background-color: rgba(167, 191, 195, 1) !important;
+           color: $negro !important;
+}
+        
     }
 
 }
