--- a/src/containers/TextAnimations/TextAnimations.scss
+++ b/src/containers/TextAnimations/TextAnimations.scss
@@ -1,19 +1,33 @@
 @import "../../variables.scss";
 
 .text-a-container {
-    background-image: url("../../assets/img/FondoHome3.png");
-    background-repeat: no-repeat;
-    background-origin: border-box;
-    background-size: cover;
-    background-color: red;
-    margin-top: -150px;
     width: 100%;
+    position: relative;
+
+    // background-image: url("../../assets/img/FondoHome3.png");
+    // background-repeat: no-repeat;
+    // background-origin: border-box;
+    // background-size: cover;
+    // background-color: red;
+    margin-top: -450px;
+
     height: 450vh;
-    z-index: -10 !important;
+    //z-index: -1 !important;
     font-family: 'komet';
 
+    .fondo {
+        position: absolute;
+        width: 100%;
+        z-index: -2;
+    }
+
     .espacio {
-        padding-top: 150px;
+        padding-top: 500px;
+    }
+
+    .texto {
+        font-size: $titulo-size;
+        color: #fff;
     }
 
     .textos-container {
@@ -28,10 +42,10 @@
             display: flex;
             flex-direction: column;
             //background-color: red;
-            font-size: $titulo-size;
+
             width: 90%;
             overflow: hidden;
-            color: #fff;
+
 
 
 
@@ -105,7 +119,7 @@
             display: flex;
             flex-direction: column;
             align-items: end;
-           // background-color: red;
+            // background-color: red;
             font-size: $titulo-size;
             width: 90%;
             overflow: hidden;
@@ -176,4 +190,5 @@
             }
         }
     }
+
 }
