--- a/src/containers/portfolio/Portfolio.scss
+++ b/src/containers/portfolio/Portfolio.scss
@@ -3,7 +3,7 @@
 .portfolio-container {
     background-color: $blanco;
     height: 150vh;
-   margin-top: -10vh;
+    margin-top: -10vh;
     //z-index: -3;
     position: relative;
 
@@ -16,7 +16,7 @@
     }
 
     .espacio {
-    //    padding-top: 40vh;
+        //    padding-top: 40vh;
     }
 
     .tres {
@@ -28,7 +28,19 @@
     }
 
     .dos {
-        justify-content: space-evenly;
+        width: 60%;
+        display: flex;
+        margin: 0 auto;
+        justify-content: center;
+       // background-color: blue;
+
+        .contenedor-dos {
+         //   background-color: aqua;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+        }
 
     }
 
