--- a/src/components/botonAcceso/BotonAcceso.scss
+++ b/src/components/botonAcceso/BotonAcceso.scss
@@ -1,14 +1,21 @@
 .boton-acceso {
-    width: 200px;
-    height: 200px;
-    //background-color: red;
+    width: 250px;
+    height: 250px;
+    //border: 1px solid blue;
     border-radius: 100%;
     cursor: pointer;
-    
+
+ //   display: flex;
+  //  flex-wrap: wrap;
+    position: relative;
     .imagen {
+        position:absolute;
+         top: 35px;
+        left: 34px;
+        //z-index: 20;
         border-radius: 100%;
-        width: 100%;
-        height: 100%;
+        width: 180px;
+        height: 180px;
         object-fit: cover;
     }
 
