router + inicio de proyectos

--- a/src/components/botonAcceso/BotonAcceso.scss
+++ b/src/components/botonAcceso/BotonAcceso.scss
@@ -4,6 +4,7 @@
     //border: 1px solid blue;
     border-radius: 100%;
     cursor: pointer;
+    background-color: red;
 
  //   display: flex;
   //  flex-wrap: wrap;
