--- a/src/components/cardProyecto/CardProyecto.scss
+++ b/src/components/cardProyecto/CardProyecto.scss
@@ -1,12 +1,18 @@
 .card-proyecto-container {
     background-color: aqua;
-    width: 200px;
-    height: 200px;
-
+    width: 250px;
+    height: 250px;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
 
     img{
-        width: 100px;
-        height: 100px;
-        
+        width: 200px;
+        height: 200px;
+        object-fit: cover;
+//        object-fit: contain;
+
     }
 }
