--- a/src/components/proyectos/Proyectos.scss
+++ b/src/components/proyectos/Proyectos.scss
@@ -1,8 +1,12 @@
 .proyectos-container{
+    margin-top: 20px;
+    padding: 20px ;
     background-color: blue;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 20px;
+    flex-wrap: wrap ;
+    
 }
