--- a/src/containers/Portafolio/Portafolio.scss
+++ b/src/containers/Portafolio/Portafolio.scss
@@ -1,4 +1,8 @@
 .portafolio-container{
+  // background-size: 100% 100%;
+  // background-position: 0px 0px;
+  // background-image: repeating-radial-gradient(75% 75% at 50% 50%, #F179A3 0%, #71C4FFFF 100%);
+   
  h1{
     //background-color: red;
     text-align: center;
