--- a/src/components/proyectos/Proyectos.scss
+++ b/src/components/proyectos/Proyectos.scss
@@ -1,7 +1,7 @@
 .proyectos-container{
     margin-top: 20px;
     padding: 20px ;
-    background-color: blue;
+    //background-color: blue;
     width: 100%;
     display: flex;
     justify-content: center;
