--- a/src/containers/Home/Contact/Contact.scss
+++ b/src/containers/Home/Contact/Contact.scss
@@ -1,7 +1,7 @@
 @import "../../../variables.scss";
 
 #contacto {
-  // background-color: red;
+  
   background-image: url("../../../assets/fondo/OndaWebeditada.png");
   background-position: center;
   background-position: left top;
@@ -54,7 +54,9 @@
     }
   }
 }
-
+.portafolio-contact{
+ // background-color: $azul-claro;
+}
 @media only screen and (max-width: 850px) {
   .contact_container {
     flex-direction: column;
