--- a/src/containers/Home/TextAnimations/TextAnimations.scss
+++ b/src/containers/Home/TextAnimations/TextAnimations.scss
@@ -3,16 +3,8 @@
 .text-a-container {
     width: 100%;
     position: relative;
-
-    // background-image: url("../../assets/img/FondoHome3.png");
-    // background-repeat: no-repeat;
-    // background-origin: border-box;
-    // background-size: cover;
-    // background-color: red;
     margin-top: -450px;
-
     height: 450vh;
-    //z-index: -1 !important;
     font-family: $komet;
 
     .fondo {
@@ -28,6 +20,7 @@
     .texto {
         font-size: $titulo-size;
         color: #fff;
+        font-weight: 600;
     }
 
     .textos-container {
@@ -41,57 +34,19 @@
         .split-text-container {
             display: flex;
             flex-direction: column;
-            //background-color: red;
-
             width: 90%;
             overflow: hidden;
-
-
-
 
             .text-part {
                 display: inline-block;
                 position: relative;
                 transform: translateX(0);
-                animation-duration: 3s;
+                animation-duration: 2s;
                 animation-timing-function: ease-out;
                 animation-fill-mode: forwards;
                 opacity: 0;
             }
 
-            .text-part.left {
-                transform: translateX(-200%);
-                animation-name: slide-in-left;
-            }
-
-            .text-part.right {
-                transform: translateX(200%);
-                animation-name: slide-in-right;
-            }
-
-            @keyframes slide-in-left {
-                0% {
-                    transform: translateX(-50%);
-                    opacity: 0;
-                }
-
-                100% {
-                    opacity: 1;
-                    transform: translateX(0);
-                }
-            }
-
-            @keyframes slide-in-right {
-                0% {
-                    transform: translateX(200%);
-                    opacity: 0;
-                }
-
-                100% {
-                    opacity: 1;
-                    transform: translateX(0);
-                }
-            }
 
         }
 
@@ -102,92 +57,52 @@
         }
 
         .dos {
-            // margin-top: 500px;
-
-            .text-part.left {
-                transform: translateX(-200%);
-                animation-name: slide-in-right;
-            }
-
-            .text-part.right {
-                transform: translateX(200%);
-                animation-name: slide-in-left;
-            }
-        }
-
-        .split-text-container-dos {
-            display: flex;
-            flex-direction: column;
             align-items: end;
-            // background-color: red;
-            font-size: $titulo-size;
-            width: 90%;
-            overflow: hidden;
-            color: #fff;
-
 
             .left {
                 margin-right: 20%;
+                // animation-name: slide-in-right-dos;
             }
-
-            .text-part {
-                display: inline-block;
-                position: relative;
-                transform: translateX(0);
-                animation-duration: 3s;
-                animation-timing-function: ease-out;
-                animation-fill-mode: forwards;
-                animation-delay: 1s;
-                opacity: 0;
-
-            }
-
-            .text-part.left {
-                transform: translateX(-200%);
-                animation-name: slide-in-right;
-            }
-
-            .text-part.right {
-                animation-name: slide-in-left;
-                transform: translateX(200%);
-            }
-
-            @keyframes slide-in-left {
-                0% {
-                    transform: translateX(-200%);
-                    opacity: 0;
-                }
-
-                100% {
-                    opacity: 1;
-                    transform: translateX(0);
-                }
-            }
-
-            @keyframes slide-in-right {
-                0% {
-                    transform: translateX(200%);
-                    opacity: 0;
-                }
-
-                100% {
-                    opacity: 1;
-                    transform: translateX(0);
-                }
-            }
-
         }
 
         .tres {
-            //  margin-top: 300px;
             align-items: center;
+        }
 
-            .text-part {
-
-                animation-delay: 2s;
-
-
+        .active {
+            .text-part.left {
+                transform: translateX(-200%);
+                animation-name: slide-in-left;
             }
+
+            .text-part.right {
+                transform: translateX(200%);
+                animation-name: slide-in-right;
+            }
+        }
+    }
+
+    @keyframes slide-in-left {
+        0% {
+            transform: translateX(-200%);
+            opacity: 0;
+        }
+
+        100% {
+            opacity: 1;
+            transform: translateX(0);
+        }
+    }
+
+    @keyframes slide-in-right {
+        0% {
+            transform: translateX(200%);
+            opacity: 0;
+        }
+
+        100% {
+            opacity: 1;
+            transform: translateX(0);
         }
     }
 
