--- a/src/containers/Home/SeccionPortafolio/SeccionPortafolio.scss
+++ b/src/containers/Home/SeccionPortafolio/SeccionPortafolio.scss
@@ -2,8 +2,8 @@
 
 .portfolio-container {
     background-color: $blanco;
-    height: 150vh;
-    margin-top: -10vh;
+    // height: 150vh;
+    margin-top: -20vh;
     //z-index: -3;
     position: relative;
 
