--- a/src/components/productivitySlider/ProductivitySlider.scss
+++ b/src/components/productivitySlider/ProductivitySlider.scss
@@ -8,74 +8,25 @@
   --accent: #ff6b35;
 }
 
-* {
+section {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-// body {
-//   font-family: Inter, sans-serif;
-//   background: #07090d;
-//   color: #c5c7ce;
-// }
-
-.head {
-  max-width: 1400px;
-  margin: auto;
-  padding: 70px 20px 40px;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  gap: 2rem;
-}
-
-.head h2 {
-  // font: 400 1.5rem/1.2 Inter, sans-serif;
-  color: #fff;
-}
-
-@media (min-width: 1024px) {
-  .head h2 {
-    font-size: 2.25rem;
-  }
-}
-
-.nav-btn {
-  width: 2.5rem;
-  height: 2.5rem;
-  border: none;
-  border-radius: 50%;
-  background: rgba(255, 255, 255, 0.12);
-  color: #fff;
-  font-size: 1.5rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  transition: 0.3s;
-}
-
-.nav-btn:hover {
-  background: $azul-oscuro;
-}
-
-.nav-btn:disabled {
-  opacity: 0.3;
-  cursor: default;
-}
 
 .slider {
+  padding-top: 15px;
   max-width: 1400px;
   margin: auto;
   overflow: hidden;
 }
 
-.controls {
-  display: flex;
-  flex-direction: row;
-  gap: 0.5rem;
-}
+// .controls {
+//   display: flex;
+//   flex-direction: row;
+//   gap: 0.5rem;
+// }
 
 .track {
   display: flex;
@@ -84,7 +35,7 @@
   justify-content: center;
   scroll-behavior: smooth;
   scroll-snap-type: x mandatory;
-  padding-bottom: 40px;
+  padding-bottom: 25px;
 }
 
 .track::-webkit-scrollbar {
@@ -104,7 +55,7 @@
 .project-card[data-active] {
   flex-basis: var(--open);
   transform: translateY(-6px);
-  box-shadow: 0 18px 55px rgba(0, 0, 0, 0.45);
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.45);
 }
 
 .project-card__bg {
@@ -189,15 +140,24 @@
   border: none;
   border-radius: 9999px;
   background: $azul-oscuro;
-  color: #fff;
   font-size: 0.9rem;
   font-weight: 600;
   cursor: pointer;
+
+  a {
+    color: #fff;
+    text-decoration: none;
+  }
 }
 
 .project-card__btn:hover {
   background: $blanco;
-  color: $azul-oscuro;
+
+  a {
+    text-decoration: none;
+    color: $azul-oscuro;
+
+  }
 
 }
 
@@ -205,7 +165,7 @@
   display: flex;
   gap: 0.5rem;
   justify-content: center;
-  padding: 20px 0;
+  // padding: 20px 0;
 }
 
 .dot {
@@ -252,11 +212,7 @@
     padding-inline: 0.3rem;
   }
 
-  .nav-btn {
-    width: 2rem;
-    height: 2rem;
-    font-size: 1.2rem;
-  }
+
 }
 
 @media (max-width: 767px) {
@@ -360,8 +316,4 @@
     padding: 0 15px 20px;
   }
 
-  .nav-btn {
-    position: static;
-    transform: none;
-  }
 }
