--- a/src/variables.scss
+++ b/src/variables.scss
@@ -3,6 +3,7 @@ $azul-oscuro: #475AA6;
 $anaranjado: #EF5F24;
 $base-morado: #9872B0;
 $azul-claro: #A7BFC3;
+$azul-mas-oscuro: #101128;
 $negro: #000000;
 $blanco: #ffffff;
 
@@ -10,3 +11,5 @@ $titulo-size: 50px;
 
 $royal: 'royal-ave';
 $komet: 'komet';
+
+$fondo-portafolio: #ffffff;
