--- a/src/components/cardProyecto/CardProyecto.scss
+++ b/src/components/cardProyecto/CardProyecto.scss
@@ -13,8 +13,8 @@
   img {
     border-radius: 20px;
 
-    width: 200px;
-    height: 200px;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     //        object-fit: contain;
   }
@@ -31,4 +31,19 @@
   box-shadow: 1px -1px 21px -3px rgba(0, 0, 0, 0.75);
   -webkit-box-shadow: 1px -1px 21px -3px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 1px -1px 21px -3px rgba(0, 0, 0, 0.75);
+}
+
+@media only screen and (max-width: 1014px) {
+  .card-proyecto-container {
+    width: 250px;
+    height: 250px;
+
+  }
+}
+@media only screen and (max-width: 500px) {
+  .card-proyecto-container {
+    width: 300px;
+    height: 300px;
+
+  }
 }
