--- a/src/components/proyectos/Proyectos.scss
+++ b/src/components/proyectos/Proyectos.scss
@@ -1,7 +1,7 @@
 .proyectos-container {
     margin-top: 20px;
     padding: 20px;
-    //background-color: blue;
+  //  background-color: blue;
     width: 90%;
     display: flex;
     justify-content: center;
@@ -9,4 +9,11 @@
     gap: 20px;
     flex-wrap: wrap;
 
+}
+@media only screen and (max-width: 500px) {
+  .proyectos-container {
+    margin-top:   0px;
+
+
+  }
 }
