--- a/src/containers/Home/Contact/Contact.scss
+++ b/src/containers/Home/Contact/Contact.scss
@@ -1,17 +1,27 @@
 @import "../../../variables.scss";
 
 #contacto {
-  
-  background-image: url("../../../assets/fondo/OndaWebeditada.png");
-  background-position: center;
-  background-position: left top;
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  height: 90vh;
 
+  height: 110vh;
+  width: 100%;
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
+
+}
+
+.portafolio-contact {
+  background-color: $fondo-portafolio;
+}
+
+.fondo {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  object-fit: cover !important;
+  object-position: 100% 0%;
+
 }
 
 .title {
@@ -23,11 +33,11 @@
 }
 
 .contact_container {
+  z-index: 2;
   display: flex;
   justify-content: space-evenly;
   padding-top: 50px;
 
-  // background-color: green;
   .chusmea {
     padding-top: 70px;
     font-family: $royal;
@@ -35,7 +45,6 @@
   }
 
   .links {
-    //  background-color: blue;
     width: 30vw;
     display: flex;
     flex-direction: column;
@@ -54,14 +63,17 @@
     }
   }
 }
-.portafolio-contact{
- // background-color: $azul-claro;
-}
+
 @media only screen and (max-width: 850px) {
   .contact_container {
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+  }
+
+  .chusmea {
+    padding-top: 30px !important;
   }
 }
 
@@ -74,6 +86,22 @@
     .links {
       img {
         height: 70px;
+        width: 80px;
+      }
+    }
+  }
+}
+
+
+@media (max-width: 1300px) {
+  .fondo {
+    object-position: 50% 0%;
+  }
+
+  .contact_container {
+    .links {
+      img {
+        height: 50px;
         width: 70px;
       }
     }
