--- a/src/containers/Home/SeccionPortafolio/SeccionPortafolio.scss
+++ b/src/containers/Home/SeccionPortafolio/SeccionPortafolio.scss
@@ -3,7 +3,7 @@
 .portfolio-container {
     background-color: $blanco;
     // height: 150vh;
-    margin-top: -20vh;
+    margin-top: 0;
     //z-index: -3;
     position: relative;
 
@@ -13,6 +13,7 @@
         padding-bottom: 10px;
         color: $negro;
         //background-color: red;
+        text-align: center;
     }
 
 
