--- a/src/components/botonAcceso/BotonAcceso.scss
+++ b/src/components/botonAcceso/BotonAcceso.scss
@@ -3,7 +3,7 @@
     height: 250px;
     //border: 1px solid blue;
     border-radius: 100%;
-    cursor: pointer;
+    cursor: url("../../assets/cursorazul.png"), pointer;;
     background-color: red;
 
  //   display: flex;
