--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -1,7 +1,7 @@
 @import "../../variables.scss";
 
 .form {
-  width: 60vw; 
+  width: 60vw;
   font-family: $komet;
   display: flex;
   justify-content: center;
@@ -57,7 +57,7 @@
     color: $blanco;
     padding: 3px 5px;
     width: 130px;
-    cursor: pointer;
+    cursor: url("../../assets/cursorazul.png"), pointer !important;
     border: 3px solid $azul-oscuro;
     font-weight: bolder;
 
