--- a/src/components/cardProyecto/CardProyecto.scss
+++ b/src/components/cardProyecto/CardProyecto.scss
@@ -8,7 +8,7 @@
   justify-content: center;
   align-items: center;
   flex-wrap: nowrap;
-  cursor: pointer !important;
+  cursor: url("../../assets/cursorazul.png"), pointer !important;
 
   img {
     border-radius: 20px;
