--- a/src/components/productivitySlider/ProductivitySlider.scss
+++ b/src/components/productivitySlider/ProductivitySlider.scss
@@ -43,7 +43,7 @@ section {
   height: 26rem;
   border-radius: 1rem;
   overflow: hidden;
-  cursor: pointer;
+  cursor:   url("../../assets/cursorazul.png"), pointer!important;
   transition: flex-basis var(--speed), transform var(--speed);
 }
 
@@ -138,7 +138,7 @@ section {
   background: $azul-oscuro;
   font-size: 0.9rem;
   font-weight: 600;
-  cursor: pointer;
+  cursor: url("../../assets/cursorazul.png"), pointer!important;
 
   a {
     color: #fff;
@@ -169,7 +169,7 @@ section {
   height: 13px;
   border-radius: 50%;
   background: $rosado;
-  cursor: pointer;
+  cursor: url("../../assets/cursorazul.png"), pointer!important;
   transition: 0.3s;
 }
 
