--- a/src/containers/Home/TextAnimations/TextAnimations.scss
+++ b/src/containers/Home/TextAnimations/TextAnimations.scss
@@ -49,7 +49,7 @@
                 display: inline-block;
                 position: relative;
                 transform: translateX(0);
-                animation-duration: 2s;
+                animation-duration: 2.5s;
                 animation-timing-function: ease-out;
                 animation-fill-mode: forwards;
                 opacity: 0;
@@ -60,7 +60,7 @@
 
         .uno {
             .right {
-                margin-left: 20%;
+                margin-left: 16%;
             }
         }
 
@@ -79,12 +79,12 @@
 
         .active {
             .text-part.left {
-                transform: translateX(-200%);
+                transform: translateX(-150vw);
                 animation-name: slide-in-left;
             }
 
             .text-part.right {
-                transform: translateX(200%);
+                transform: translateX(150vw);
                 animation-name: slide-in-right;
             }
         }
@@ -92,7 +92,7 @@
 
     @keyframes slide-in-left {
         0% {
-            transform: translateX(-200%);
+            transform: translateX(-150vw);
             opacity: 0;
         }
 
@@ -104,7 +104,7 @@
 
     @keyframes slide-in-right {
         0% {
-            transform: translateX(200%);
+            transform: translateX(150vw);
             opacity: 0;
         }
 
