--- a/src/containers/Portafolio/Portafolio.scss
+++ b/src/containers/Portafolio/Portafolio.scss
@@ -6,10 +6,8 @@
    flex-direction: column;
    justify-content: center;
    align-items: center;
-
-
    h1 {
-      font-family: "royal-ave";
+      font-family: "montserrat";
       text-align: center;
       margin-top: 120px;
       margin-bottom: 20px;
@@ -19,6 +17,6 @@
 
 @media only screen and (max-width: 500px) {
    h1 {
-        margin-bottom: 0;
+      margin-bottom: 0;
    }
 }
