--- a/src/containers/Home/Contact/Contact.scss
+++ b/src/containers/Home/Contact/Contact.scss
@@ -39,6 +39,8 @@
   padding-top: 50px;
 
   .chusmea {
+  font-family: 'montserrat' !important;
+
     padding-top: 70px;
     font-family: $royal;
     color: $blanco;
@@ -54,6 +56,7 @@
     img {
       height: 70px;
       width: 100px;
+
       &:hover {
         opacity: 0.4;
         transition: 0.8s;
