--- a/src/components/navBar/NavBar.scss
+++ b/src/components/navBar/NavBar.scss
@@ -26,7 +26,7 @@
         padding: 10px;
         border-radius: 30px !important;
         border: 1px solid rgba(0, 0, 0, 0) !important;
-
+   transition:  0.5s;
     }
 
     .estilo-link:hover,
