--- a/src/components/productivitySlider/ProductivitySlider.scss
+++ b/src/components/productivitySlider/ProductivitySlider.scss
@@ -139,7 +139,7 @@ section {
   font-size: 0.9rem;
   font-weight: 600;
   cursor: url("../../assets/cursorazul.png"), pointer !important;
-
+   transition:  0.5s;
   color: #fff;
 
 
