--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -68,7 +68,7 @@
     &:hover {
       color: white;
       background-color: rgba(0, 0, 0, 0.418);
-      transition: 0.8s;
+         transition:  0.5s;;
     }
   }
 
