--- a/src/containers/Portafolio/Portafolio.scss
+++ b/src/containers/Portafolio/Portafolio.scss
@@ -7,7 +7,7 @@
    justify-content: center;
    align-items: center;
    h1 {
-      font-family: "montserrat";
+      font-family: "montserrat" !important;
       text-align: center;
       margin-top: 120px;
       margin-bottom: 20px;
