--- a/src/containers/Identidad/Identidad.scss
+++ b/src/containers/Identidad/Identidad.scss
@@ -1,20 +1,27 @@
-.container-identidad{
-    width: 100%;
-    background-color: rgb(255, 255, 255) ;
-    padding-top: 120px;
-display: flex;
-flex-direction: column;
-align-items: center;
-justify-content: center;
-margin-bottom: 50px;
-    h1{
-             font-family: "montserrat" !important;
-    }
+.container-identidad {
+	width: 100%;
+	background-color: rgb(255, 255, 255);
+	padding-top: 120px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	margin-bottom: 50px;
 
+	h1 {
+		font-family: "montserrat" !important;
+	}
+
+	.item-identidad{
+		margin-bottom: 10px;
+		h2{
+			margin: 20px 0 ;
+		}
+	}
 	.video-id {
 		position: relative;
 
-        		.loading {
+		.loading {
 			position: absolute;
 			top: 30%;
 			left: 50%;
@@ -22,13 +29,14 @@ margin-bottom: 50px;
 			transform: translateX(-50%);
 		}
 
-			width: 560px;
-			height: 315px;
-            iframe {
+		width: 960px;
+		height: 315px;
+
+		iframe {
 			width: 100%;
 			height: 100%;
 			border-radius: 10px;
 		}
 
-		}
+	}
 }
