--- a/src/components/cardProyecto/CardWeb.scss
+++ b/src/components/cardProyecto/CardWeb.scss
@@ -1,7 +1,7 @@
 @import '../../variables.scss';
 
 .cardweb-container {
-  
+
   width: 100%;
   padding: 30px;
   display: flex;
@@ -13,7 +13,6 @@
 
   .card-item-web {
     border-radius: 10px;
-    
     width: 70%;
     //height: ;
     position: relative;
@@ -22,45 +21,79 @@
       width: 100%;
       border-radius: 10px;
     }
+
     .texto-link {
       width: 100%;
       height: 100%;
       position: absolute;
       top: 0px;
       //opacity: 1;
-       opacity: 0;
+      opacity: 0;
       border-radius: 10px;
       background-color: #ef5e248f;
       display: flex;
       flex-direction: column;
       flex-wrap: nowrap;
       justify-content: center;
-      align-items: center; 
-       transition:  0.5s;
+      align-items: center;
+      transition: 0.5s;
+      text-align: center;
+
       // gap:30px;
       h2 {
         font-family: 'royal-ave';
         color: rgb(0, 0, 0);
       }
-      a {  
-        transition:  0.5s;
+
+      a {
+        transition: 0.5s;
         font-size: 30px;
         text-decoration: none;
         color: $blanco;
-        background-color:$base-morado;
+        background-color: $base-morado;
         padding: 10px 20px;
         border-radius: 10px;
         font-family: 'royal-ave';
       }
-      a:hover{
-background-color: $blanco;
-        color:$base-morado;
+
+      a:hover {
+        background-color: $blanco;
+        color: $base-morado;
       }
     }
   }
 
   .texto-link:hover {
-    
+
     opacity: 1;
+  }
+}
+
+@media (max-width: 770px) {
+  .cardweb-container {
+
+    .card-item-web {
+      width: 100%;
+      height: 200px;
+  img {
+      width: 100%;
+            height: 200px;
+  object-fit: cover;
+    }
+    }
+  }
+}
+@media (max-width: 400px) {
+  .cardweb-container {
+  padding:  0px;
+    .card-item-web {
+      width: 100%;
+      height: 200px;
+  img {
+      width: 100%;
+            height: 200px;
+  object-fit: cover;
+    }
+    }
   }
 }
