--- a/src/containers/Portafolio/Portafolio.scss
+++ b/src/containers/Portafolio/Portafolio.scss
@@ -6,6 +6,7 @@
    flex-direction: column;
    justify-content: center;
    align-items: center;
+
    h1 {
       font-family: "montserrat" !important;
       text-align: center;
@@ -15,8 +16,11 @@
    }
 }
 
-@media only screen and (max-width: 500px) {
-   h1 {
-      margin-bottom: 0;
+@media (max-width: 500px) {
+   .portafolio-container {
+      h1 {
+         font-size: 30px !important;
+         margin-bottom: 0;
+      }
    }
 }
